--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,6 @@ set(DATA_DIR ${CMAKE_SOURCE_DIR}/data)
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/01_hello_opencv")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/02_images")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/03_videos_and_cameras")
+add_subdirectory("${CMAKE_SOURCE_DIR}/project/04_drawing")
+add_subdirectory("${CMAKE_SOURCE_DIR}/project/05_user_interface")
+# add_subdirectory("${CMAKE_SOURCE_DIR}/project/81_homework_01")
