--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/project/02_images")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/03_videos_and_cameras")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/04_drawing")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/05_user_interface")
-# add_subdirectory("${CMAKE_SOURCE_DIR}/project/81_homework_01")
+add_subdirectory("${CMAKE_SOURCE_DIR}/project/06_image_histogram")
+add_subdirectory("${CMAKE_SOURCE_DIR}/project/81_homework_01")
