--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,6 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/project/05_user_interface")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/06_image_histogram")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/07_image_thresholding")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/08_image_blending")
+add_subdirectory("${CMAKE_SOURCE_DIR}/project/09_image_blurring")
+add_subdirectory("${CMAKE_SOURCE_DIR}/project/10_image_gradients")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/81_homework_01")
