--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,5 +21,6 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/project/07_image_thresholding")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/08_image_blending")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/09_image_blurring")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/10_image_gradients")
+add_subdirectory("${CMAKE_SOURCE_DIR}/project/11_morphological_transformations")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/81_homework_01") 
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/정태민_2018204059_HW_02")
