--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,6 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/project/09_image_blurring")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/10_image_gradients")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/11_morphological_transformations")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/12_hough_transform")
+add_subdirectory("${CMAKE_SOURCE_DIR}/project/14_geometric_transformations")
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/81_homework_01") 
 add_subdirectory("${CMAKE_SOURCE_DIR}/project/정태민_2018204059_HW_02")
